--- a/index.html
+++ b/index.html
@@ -2,9 +2,14 @@
 <html>
   <head>
     <link href="css/styles.css" rel="stylesheet" style="text/css">
+    <link rel="stylesheet" type="text/css" href="">
     <title>Anitas Kitchen</title>
   </head>
   <body>
+    <div class="row">
+      <div class="col-md-12 jumbotron">
+        <div class="text-center">
+        </div>
 
   </body>
 </html>
