add <h1 id=header> and a </br>

--- a/index.html
+++ b/index.html
@@ -6,10 +6,13 @@
     <title>Anitas Kitchen</title>
   </head>
   <body>
-    <div class="row">
-      <div class="col-md-12 jumbotron">
-        <div class="text-center">
-        </div>
+    <div class="container">
+      <div class="row">
+        <div class="col-md-12 jumbotron">
+         <div class="text-center">
+           <h1 id="header"> We provide The Best Food<br/> At The Right Price</h1>
+         </div>
+
 
   </body>
 </html>
