--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
       <div class="row">
         <div class="col-md-12 jumbotron">
          <div class="text-center">
+           <img src="img/logoBig.png">
            <h1 id="header"> We provide The Best Food<br/> At The Right Price</h1>
          </div>
 
