add <div class=container fluid

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
            <img src="img/logoBig.png">
            <h1 id="header"> We provide The Best Food<br/> At The Right Price</h1>
          </div>
+         <div class="container-fluid">
 
 
   </body>
