--- a/index.html
+++ b/index.html
@@ -14,6 +14,12 @@
            <h1 id="header"> We provide The Best Food<br/> At The Right Price</h1>
          </div>
          <div class="container-fluid">
+           <div class="row">
+             <div class="col-md-3 padding-0">
+               <div class="col-md-12">
+                 <div class="lngth">
+                   <h2 class="txt">Happy Hour</h2>
+                 </div>
 
 
   </body>
