--- a/index.html
+++ b/index.html
@@ -17,9 +17,13 @@
            <div class="row">
              <div class="col-md-3 padding-0">
                <div class="col-md-12">
-                 <div class="lngth">
-                   <h2 class="txt">Happy Hour</h2>
+                 <div class="length">
+                   <h2 class="text">Happy Hour</h2>
                  </div>
+                 <div class="col-md-12 clr">
+                   <div class="length">
+                     <h2 class="text">Party Time</div>
+                         </div>
 
 
   </body>
