--- a/index.html
+++ b/index.html
@@ -20,10 +20,15 @@
                  <div class="length">
                    <h2 class="text">Happy Hour</h2>
                  </div>
-                 <div class="col-md-12 clr">
                    <div class="length">
-                     <h2 class="text">Party Time</div>
+                     <h2 class="text">Party Time</h2>
                          </div>
+                         <div class="col-md-3 padding-0">
+                             <img src="img/foodtop/breakfast.jpg"  class="img-responsive" style="display:inline" alt="Breakfast" width="100%" height="100%">
+                               <div class="overlay-mini">
+                                 <div class="txttt ">Breakfast</div>
+                               </div>
+
 
 
   </body>
