--- a/index.html
+++ b/index.html
@@ -1,35 +1,59 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <link href="css/styles.css" rel="stylesheet" style="text/css">
-    <link rel="stylesheet" type="text/css" href="">
-    <title>Anitas Kitchen</title>
-  </head>
-  <body>
-    <div class="container">
-      <div class="row">
-        <div class="col-md-12 jumbotron">
-         <div class="text-center">
-           <img src="img/logoBig.png">
-           <h1 id="header"> We provide The Best Food<br/> At The Right Price</h1>
-         </div>
-         <div class="container-fluid">
-           <div class="row">
-             <div class="col-md-3 padding-0">
-               <div class="col-md-12">
-                 <div class="length">
-                   <h2 class="text">Happy Hour</h2>
-                 </div>
-                   <div class="length">
-                     <h2 class="text">Party Time</h2>
-                         </div>
-                         <div class="col-md-3 padding-0">
-                             <img src="img/foodtop/breakfast.jpg"  class="img-responsive" style="display:inline" alt="Breakfast" width="100%" height="100%">
-                               <div class="overlay-mini">
-                                 <div class="txttt ">Breakfast</div>
-                               </div>
 
+<head>
+  <link href="css/styles.css" rel="stylesheet" style="text/css">
+  <link rel="stylesheet" type="text/css" href="">
+  <title>Anitas Kitchen</title>
+</head>
 
+<body>
+  <div class="row">
+    <div class="row">
+      <div class="col-md-12 jumbotron">
+        <div class="text-center">
+          <img src="img/logoBig.png">
+          <h1> We provide The Best Food<br/> At The Right Price</h1>
+        </div>
+        <div class="container-fluid">
+          <div class="row">
+            <div class="col-md-3 padding-0">
+              <div class="col-md-12">
+                <div class="length">
+                  <h2 class="text">Happy Hour</h2>
+                </div>
+                <div class="length">
+                  <h2 class="text">Party Time</h2>
+                </div>
+                <div class="col-md-3 padding-0">
+                  <img src="img/foodtop/breakfast.jpg" class="img-responsive" style="display:inline" alt="Breakfast" width="100%" height="100%">
+                  <div class="overlay-mini">
+                    <div class="text">Breakfast</div>
+                  </div>
+                  <div class="col-md-3 padding-0">
+                    <img src="img/foodtop/lunch.jpg" class="img-responsive" style="display:inline" alt="Lunch" width="100%" height="100%">
+                    <div class="overlay-mini">
+                      <div class="text">Lunch</div>
+                      <div class="col-md-3 padding-0">
+                          <img src="img/foodtop/dinner.jpg"  class="img-responsive" style="display:inline" alt="Dinner" width="100%" height="100%">
+                          <div class="overlay-mini">
+                            <div class="text">Dinner</div>
+                          </div>
+                          <div class="container-fluid">
+                            <div class="row">
+                              <div class="col-md-1">
+                              </div>
+                              <div class="border">
+                              <div class="col-md-5 myclass">
+                                <div class="col-md-12">
+                                  <img src="img/fastFood1.jpg"  class="img-responsive" alt="fastFood1">
+                                 </div>
+                                 <div class="col-md-12">
+                                   <img src="img/fastFood2.jpg" alt="fastFood1" class="img-responsive">
+                                </div>
 
-  </body>
+                           </div>
+
+</body>
+
 </html>
