--- a/index.html
+++ b/index.html
@@ -43,6 +43,7 @@
             </div>
             <div class="col-md-12">
               <img src="img/foodtop/dinner.jpg"  class="img-responsive" style="display:inline" alt="Dinner" width="100%" height="100%">
+              <div class="overlay-mini">
 
             </div>
 
