--- a/index.html
+++ b/index.html
@@ -19,35 +19,148 @@
   </div>
   <div class="container-fluid">
     <div class="row">
-      <div class="col-md-3 padding-0">
+      <div class="col-md-6 padding-0">
         <div class="col-md-12">
           <div class="length">
             <h2 class="text">Happy Hour</h2>
           </div>
         </div>
-        <div class="col-md-12">
-          <div class="length">
-            <h2 class="text">Party Time</div>
+      </div>
+      <div class="col-md-12 clr">
+        <div class="length">
+          <h2 class="text">Party Time</div>
                 </div>
-        </div>
-        <div class="col-md-3 padding-0">
-            <img src="img/foodtop/breakfast.jpg"  class="img-responsive" style="display:inline" alt="Breakfast" width="100%" height="100%">
-              <div class="overlay-mini">
-                <div class="text ">Breakfast</div>
               </div>
-       </div>
-       <div class="col-md-3 padding-0">
-          <img src="img/foodtop/lunch.jpg"  class="img-responsive" style="display:inline" alt="Lunch" width="100%" height="100%">
+          </div>
+        </div>
+      <div class="col-md-3 padding-0">
+          <img src="img/foodtop/breakfast.jpg"  class="img-responsive" style="display:inline" alt="Breakfast" width="100%" height="100%">
             <div class="overlay-mini">
-                <div class="text">Lunch</div>
+              <div class="text ">Breakfast</div>
             </div>
-            <div class="col-md-12">
-              <img src="img/foodtop/dinner.jpg"  class="img-responsive" style="display:inline" alt="Dinner" width="100%" height="100%">
-              <div class="overlay-mini">
-
-            </div>
-
+     </div>
+     <div class="col-md-3 padding-0">
+        <img src="img/foodtop/lunch.jpg"  class="img-responsive" style="display:inline" alt="Lunch" width="100%" height="100%">
+          <div class="overlay-mini">
+              <div class="text-align">Lunch</div>
+          </div>
     </div>
+      <div class="col-md-3 padding-0">
+          <img src="img/foodtop/dinner.jpg"  class="img-responsive" style="display:inline" alt="Dinner" width="100%" height="100%">
+          <div class="overlay-mini">
+            <div class="text">Dinner</div>
+          </div>
+      </div>
+    </div>
+       <div class="container-fluid">
+         <div class="row">
+           <div class="col-md-1">
+           </div>
+           <div class="border">
+           <div class="col-md-5 myclass">
+             <div class="col-md-12">
+               <img src="img/fastFood1.jpg"  class="img-responsive" alt="fastFood1">
+              </div>
+              <div class="col-md-12">
+                <img src="img/fastFood2.jpg" alt="fastFood1" class="img-responsive">
+             </div>
+           </div>
+         </div>
+           <div class="col-md-1">
+           </div>
+         </div>
+            <div class="col-md-5 brd">
+              <h1>Fast Food</h1>
+              <h3>You'll love our delicious fast food</h3>
+              <p>	Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+                <div class="text-left"> </div>
+           </div>
+         </div>
+
+
+
+       <div class="container-fluid">
+         <div class="row">
+           <div class="col-md-1">
+           </div>
+           <div class="col-md-5 brd">
+             <h1>Drinks</h1>
+             <h3>We also produce delicious drinks</h3>
+             <p>	Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+             <div class="text-right"> </div>
+          </div>
+
+        </div>
+      </div>
+          <div class="container-fluid">
+          <div class="col-md-12 jumbotron bg" style="margin-top: 7%;">
+          		<div class="text-center">
+          		<img src="img/fastfood/beefBurger.jpg"  class="img-responsive" alt="Dinner">
+          		<img src="img/fastfood/chickenBurger.jpg"  class="img-responsive" alt="Dinner">
+          		<img src="img/fastfood/chickenPizza.jpg"  class="img-responsive" alt="Dinner">
+              </div>
+          </div>
+        </div>
+        <div class="container-fluid padding-01">
+          <div class="border">
+            <div class="row">
+              <div class="col-md-8">
+                <div class="text-center justify-content">
+                <h2 style="color:#F15A29;">Our Happy Customers</h2>
+          <h3>George Richard</h3>
+          <p> Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute
+            irure dolor in reprehenderit in voluptate.</p>
+          <span style="font-size:30px;color:#F15A29;"> &#8249; </span>
+          <img src="img/customers/p1.png" class="img-responsive">
+          <img src="img/customers/p2.png" class="img-responsive">
+          <img src="img/customers/p3.png" class="img-responsive"><span style="font-size:30px;color:#F15A29;"> &#8250;</span>
+        </div>
+      </div>
+      <div class="col-md-4" id="bord">
+        <div>
+          <h2 style="color:#F15A29;">About Menu</h2>
+          <p> Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute
+            irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+        </div>
+
+      </div>
+    </div>
+  </div>
+  </div>
+  <div class="row">
+    <div class="col-md-12 padding-0">
+      <div class="container-fluid1">
+        <div class="row jumbotron2">
+          <div class="col-md-12">
+            <h1 id="text">Get our daily food items delivered to your email</h1>
+          </div>
+          <div class="col-md-12 text-center">
+            <form action="">
+              <input type="email" name="email" class="form1" placeholder="Your Email">
+              <a href="#" class="form2">Subscribe</a>
+            </form>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+  <div class="row">
+    <div class="col-md-12 padding-0">
+      <div class="container-fluid1">
+        <footer>
+          <div class="container-fluid1 text-center">
+            <h2 style="color: white">  <img src="img/footerlogos/logo_white.png">MENU</h2>
+            <h3 style="color: white">Thats What We Are <br><br></h3>
+            <img src="img/footerlogos/facebook.png">
+            <img src="img/footerlogos/twitter.png">
+            <img src="img/footerlogos/pinterest.png">
+            <h4 style="color: white"><br><br><br>2018 Menu Restaurant</4>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
+</footer>
 
   </body>
 </html>
